build_k8s/testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-worker
  namespace: default
  labels:
    app: testing-worker
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: testing-worker
  template:
    metadata:
      labels:
        app: testing-worker
    spec:
      serviceAccountName: iicpc-testing
      containers:
      - name: testing
        image: 445711599575.dkr.ecr.us-east-1.amazonaws.com/iicpc-testing:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "200m"
            memory: 256Mi
