build_k8s/leaderboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboard-generator
  namespace: default
  labels:
    app: leaderboard-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leaderboard-generator
  template:
    metadata:
      labels:
        app: leaderboard-generator
    spec:
      containers:
      - name: leaderboard
        image: 445711599575.dkr.ecr.us-east-1.amazonaws.com/iicpc-leaderboard:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: public-html
          mountPath: /app/data
        resources:
          limits:
            cpu: "250m"
            memory: 128Mi
          requests:
            cpu: "100m"
            memory: 64Mi
      volumes:
      - name: public-html
        persistentVolumeClaim:
          claimName: public-html-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: leaderboard-generator
  namespace: default
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: leaderboard-generator
  type: ClusterIP
